--- a/provisioning/allinone/roles/mysql/tasks/main.yml
+++ b/provisioning/allinone/roles/mysql/tasks/main.yml
@@ -5,7 +5,7 @@
 - name: Install Package
   apt:
     pkg: "{{ item }}"
-    state: installed
+    state: present
   with_items:
     - mysql-server
 
@@ -81,4 +81,3 @@
     chdir: /home/isucon/isubata/bench/
   become: yes
   #when: isubata_repository.changed
-
